Fixed floater z-index

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1221,7 +1221,8 @@ html{
                 overflow-y: hidden;
                  .landing-page{
                     // max-width: 100vw;
-                     z-index: 0;
+                    position: relative;
+                     z-index: -10;
                      margin-top: 0em;
                      margin-bottom: 10em;
                      // border: 2px solid red;
@@ -1242,7 +1243,7 @@ html{
                          justify-content: flex-start;
                          // border: 2px solid red;
                          margin-bottom: -1em;
-                         z-index: 0;
+                         z-index: -10;
                         
                          h1{
                              margin: .5em 0;
